@@ -19,6 +19,7 @@ Version 1.9.9+svn:
    * added support for SSF to SUF via a [filter_side] subtag
    * added support for [enemy_of]<SSF> to SSF
    * added support for [allied_with]<SSF> to SSF
+   * New [find_path] tag, a WML interface to the pathfinder.
  * Miscellaneous and bug fixes:
    * Fixed compilation on all Debian architectures (Debian bug #636193)
    * Fixed handling of #ifver and #ifnver preprocessor directives in wmllint
